--- a/src/Ens/JobeetBundle/Resources/views/Job/new.html.twig
+++ b/src/Ens/JobeetBundle/Resources/views/Job/new.html.twig
@@ -1,6 +1,6 @@
-{% extends '::base.html.twig' %}
+{% extends 'EnsJobeetBundle::layout.html.twig' %}
 
-{% block body -%}
+{% block content %}
     <h1>Job creation</h1>
 
     {{ form(form) }}
